adding a couple of test for Nearest Storage Facility (FTNSF)

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Johan Soto",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.7.2"
+    "cypress": "^13.7.2",
+    "cypress-real-events": "^1.12.0"
   }
 }
